MESSAGE(STATUS "Adding C++ Sources")
SET(BINARY ${CMAKE_PROJECT_NAME}_lib)

# Get the source files and the subdirectories for headers.
FILE(GLOB_RECURSE CPP_SOURCES LIST_DIRECTORIES true *.h *.cc *.tcc)
HEADER_DIRECTORIES(HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_LIBRARY(${BINARY} STATIC ${CPP_SOURCES})
FILE(COPY include DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

# Include the private sources/public headers.
TARGET_INCLUDE_DIRECTORIES(${BINARY}
    PUBLIC ${HEADERS}
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/lib
    PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src
)
