MESSAGE(STATUS "Adding cpp apps")

# SET(BINARY ${CMAKE_PROJECT_NAME})

# FILE(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cc)

# SET(BINARY ${CMAKE_PROJECT_NAME})

# ADD_LIBRARY(${BINARY} STATIC ${SOURCES})
# INCLUDE_DIRECTORIES(${BINARY}_lib
#     PUBLIC
#         "${CMAKE_SOURCE_DIR}/tools/cpp/apps"
# )
